--- a/maze.html
+++ b/maze.html
@@ -68,8 +68,8 @@ void main()
     if(i==1) gl_FragColor = fDrainMatrix*texture2D(floor, fTexCoord);
     else if(i==2) gl_FragColor = fDrainMatrix*texture2D(ceiling, fTexCoord);
     else if(i==3) gl_FragColor = fDrainMatrix*texture2D(pic, fTexCoord);
-    else if(i==4) gl_FragColor = vec4(texture2D(start, fTexCoord).rgb,texture2D(start, fTexCoord).a*.9);
-    else if(i==5) gl_FragColor = vec4(texture2D(fin, fTexCoord).rgb,texture2D(fin, fTexCoord).a*.9);
+    else if(i==4) gl_FragColor = vec4(texture2D(start, fTexCoord).rgb,texture2D(start, fTexCoord).a*.8);
+    else if(i==5) gl_FragColor = vec4(texture2D(fin, fTexCoord).rgb,texture2D(fin, fTexCoord).a*1);
     else if(i==6) gl_FragColor = vec4(texture2D(open, fTexCoord).rgb,texture2D(open, fTexCoord).a*.9);
     else if(i==7) gl_FragColor = texture2D(rat, fTexCoord);
     else if(i==8) gl_FragColor = fColor;
